feat(book): implement core logic in BookServiceImpl