@@ -1,36 +1,31 @@
 package com.nurbb.libris.service.impl;
 
 import com.nurbb.libris.exception.NotFoundException;
-import com.nurbb.libris.model.dto.request.AuthorRequest;
 import com.nurbb.libris.model.dto.request.BookRequest;
 import com.nurbb.libris.model.dto.response.BookResponse;
 import com.nurbb.libris.model.entity.Author;
 import com.nurbb.libris.model.entity.Book;
-import com.nurbb.libris.model.mapper.AuthorMapper;
 import com.nurbb.libris.model.mapper.BookMapper;
-import com.nurbb.libris.repository.AuthorRepository;
 import com.nurbb.libris.repository.BookRepository;
+import com.nurbb.libris.service.AuthorService;
 import com.nurbb.libris.service.BookService;
-import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class BookServiceImpl implements BookService {
 
     private final BookRepository bookRepository;
-    private final AuthorRepository authorRepository;
+    private final AuthorService authorService;
     private final BookMapper bookMapper;
-    private final AuthorMapper authorMapper;
 
     private final List<Consumer<Book>> bookCreationListeners = new ArrayList<>();
 
@@ -39,13 +34,15 @@ public class BookServiceImpl implements BookService {
     public BookResponse addBook(BookRequest request) {
         validateBookInput(request);
 
-        Set<Author> authors = resolveAuthorsByName(request.getAuthors());
-        Book book = bookMapper.toEntity(request, authors);
-        book.setAvailable(book.getCount() > 0);
+        if (bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new IllegalArgumentException("Book with the same ISBN already exists.");
+        }
 
+        Author author = authorService.getAuthorByNameOrCreate(request.getAuthorName());
+        Book book = bookMapper.toEntity(request, author);
         Book saved = bookRepository.save(book);
-        bookCreationListeners.forEach(listener -> listener.accept(saved));
 
+        bookCreationListeners.forEach(listener -> listener.accept(saved));
         return bookMapper.toResponse(saved);
     }
 
@@ -58,41 +55,45 @@ public class BookServiceImpl implements BookService {
 
     @Override
     public List<BookResponse> getAllBooks() {
-        return bookRepository.findAll()
-                .stream()
+        return bookRepository.findAll().stream()
                 .map(bookMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Page<BookResponse> searchBooks(String query, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
 
-        Set<Book> combinedResults = new HashSet<>();
-        combinedResults.addAll(bookRepository.findByTitleContainingIgnoreCase(query, pageable).getContent());
-        combinedResults.addAll(bookRepository.findByIsbnContainingIgnoreCase(query, pageable).getContent());
-        combinedResults.addAll(bookRepository.findByAuthorName(query, pageable).getContent());
+        Set<Book> mergedResults = Stream.of(
+                bookRepository.findByTitleContainingIgnoreCase(query, pageable),
+                bookRepository.findByAuthor_NameContainingIgnoreCase(query, pageable),
+                bookRepository.findByIsbnContainingIgnoreCase(query, pageable)
+        ).flatMap(p -> p.getContent().stream()).collect(Collectors.toSet());
 
-        List<BookResponse> responseList = combinedResults.stream()
+        List<BookResponse> responseList = mergedResults.stream()
                 .map(bookMapper::toResponse)
                 .toList();
 
-        return new PageImpl<>(responseList, pageable, responseList.size()); // Manuel page oluşturduk
+        return new PageImpl<>(responseList, pageable, responseList.size());
     }
+
     @Override
     @Transactional
     public BookResponse updateBook(UUID id, BookRequest request) {
-        Book existing = bookRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Book not found"));
+        validateBookInput(request);
 
-        Set<Author> authors = resolveAuthorsByName(request.getAuthors());
+        Book existing = bookRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Book not found with id: " + id));
+
+        Author author = authorService.getAuthorByNameOrCreate(request.getAuthorName());
 
         existing.setTitle(request.getTitle());
         existing.setIsbn(request.getIsbn());
         existing.setPublishedDate(request.getPublishedDate());
         existing.setGenre(request.getGenre());
-        existing.setAvailable(request.getCount()> 0);
-        existing.setAuthors(authors);
+        existing.setCount(request.getCount());
+        existing.setAvailable(request.getCount() > 0);
+        existing.setAuthor(author);
 
         return bookMapper.toResponse(bookRepository.save(existing));
     }
@@ -101,40 +102,25 @@ public class BookServiceImpl implements BookService {
     @Transactional
     public void deleteBook(UUID id) {
         Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Book not found"));
+                .orElseThrow(() -> new NotFoundException("Book not found with id: " + id));
         bookRepository.delete(book);
     }
-
-    private Set<Author> resolveAuthorsByName(Set<String> names) {
-        return names.stream()
-                .map(name -> authorRepository.findByNameIgnoreCase(name)
-                        .orElseGet(() -> authorRepository.save(authorMapper.toEntity(new AuthorRequest(name)))))
-                .collect(Collectors.toSet());
-    }
-
-//    private Set<Author> resolveAuthorsById(Set<UUID> authorIds) {
-//        return authorIds.stream()
-//                .map(id -> authorRepository.findById(id)
-//                        .orElseThrow(() -> new NotFoundException("Author not found with id: " + id)))
-//                .collect(Collectors.toSet());
-//    }
 
     public void addBookCreationListener(Consumer<Book> listener) {
         bookCreationListeners.add(listener);
     }
 
-
     private void validateBookInput(BookRequest request) {
-        if (request.getTitle() == null || request.getTitle().trim().isEmpty()) {
+        if (request.getTitle() == null || request.getTitle().isBlank()) {
             throw new IllegalArgumentException("Book title cannot be empty");
         }
 
-        if (request.getIsbn() == null || request.getIsbn().trim().isEmpty()) {
+        if (request.getIsbn() == null || request.getIsbn().isBlank()) {
             throw new IllegalArgumentException("ISBN cannot be empty");
         }
 
-        if (request.getAuthors() == null || request.getAuthors().isEmpty()) {
-            throw new IllegalArgumentException("At least one author must be specified");
+        if (request.getAuthorName() == null || request.getAuthorName().isBlank()) {
+            throw new IllegalArgumentException("Author name must be specified");
         }
 
         if (request.getCount() == null || request.getCount() < 0) {
@@ -149,6 +135,4 @@ public class BookServiceImpl implements BookService {
             throw new IllegalArgumentException("Genre must be provided");
         }
     }
-
-
 }
